<resources>
    <string name="app_name">My Calculator</string>
    <string name="result">0</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="same">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="sum">+</string>
    <string name="subt">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
</resources>