<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/result"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text_view">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:hapticFeedbackEnabled="false"
                android:shadowColor="@color/green"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textColorHighlight="@color/blue_dark"
                android:textColorLink="@color/green"
                android:textSize="34sp"
                app:rippleColor="@color/red"
                app:strokeColor="@color/blue" />

            <Button
                android:id="@+id/eigth_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/eigth"
                android:textColor="@color/white"
                android:textColorHighlight="@color/blue"
                android:textColorLink="@color/blue"
                android:textSize="34sp"
                app:rippleColor="@color/red" />

            <Button
                android:id="@+id/nine_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/red" />

            <Button
                android:id="@+id/sum_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_dark"
                android:text="@string/sum"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/blue" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/four_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/red"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/five_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/red" />

            <Button
                android:id="@+id/six_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/red" />

            <Button
                android:id="@+id/subt_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_dark"
                android:text="@string/subt"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/blue" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/one_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/red" />

            <Button
                android:id="@+id/two_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/red" />

            <Button
                android:id="@+id/three_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/red" />

            <Button
                android:id="@+id/mult_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_dark"
                android:text="@string/mult"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/blue" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/point_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/red" />

            <Button
                android:id="@+id/zero_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/red" />

            <Button
                android:id="@+id/same_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:text="@string/same"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/black" />

            <Button
                android:id="@+id/div_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_dark"
                android:text="@string/div"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:rippleColor="@color/blue" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>